JDK 8 build fix (#66)